# Plex-Meta-Manager-Config-Generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile  README.md  docker-build.sh  docker-compose.yaml
docker/root/config/: config.sample.yaml
scripts/: git-increment-version.sh
src/pmm_cfg_gen/: .gitignore  __init__.py  config_default.yaml  logging.yaml
src/pmm_cfg_gen/templates/: collection.report.html.j2  collection.report.json.j2  library.json.j2  metadata.report.html.j2  metadata.report.json.j2  movie.collection.json.j2  movie.collection.yaml.j2  movie.metadata.json.j2  movie.metadata.yaml.j2  movies.collection.json.j2  movies.collection.yml.j2  movies.metadata.json.j2  movies.metadata.yml.j2  report.collection.html.j2  report.collection.json.j2  report.library.html.j2  report.metadata.html.j2  report.metadata.json.j2  show.collection.yaml.j2  show.metadata.json.j2  show.metadata.yaml.j2  template.collection.yaml.j2  thePosterDatabase.html.j2  thePosterDatabase.json.j2  tvshows.collection.json.j2  tvshows.collection.yml.j2  tvshows.metadata.json.j2  tvshows.metadata.yml.j2
src/pmm_cfg_gen/utils/: cli_args.py  file_utils.py  fileutils.py  logging.py  logging_utils.py  plex.py  plex_cache.py  plex_stats.py  plex_utils.py  plexutils.py  pmm_cfg_manager.py  pmm_utils.py  settings_utils_v1.py  settings_utils_v2.py  settings_yml.py  template_filters.py  template_manager.py  time_span.py  timer.py  tmdb_utils.py  trakt_utils.py  tvdb_utils.py  url_utils.py
