[tool.poetry]
name = "pmm-cfg-gen"
version = "0.1.0"
description = "A script to help automatically generate Plex Meta Manager configuration files for your libraries"
authors = ["Shawn Anderson <sanderson@eye-catcher.com>"]
readme = "README.md"
packages = [{include = "src/pmm_cfg_gen"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
